# authz

./: CMakeLists.txt  common.h  main.cpp  mainframe.cpp  mainframe.h  plugin.cpp  plugin.h  request.cpp  request.h  requrest.h
mockcpp/: CMakeLists.txt
mockcpp/include/mockcpp/: mockcpp.h
tests/: request_unittest.cpp
